# demo-slint

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  auto_coreservice_mock.service  build.rs  coffeeapp.service  deploy.sh  launch.sh  package.json  webpack.config.js
src/: main.rs
ui/: appwindow.slint
ui/assets/: colors.slint
ui/components/: error-overlay.slint  finished.slint  idle-to-production.slint  ingredient.slint  toolbar.slint
ui/models/: error-types.slint  ingredient.slint  products.slint  ui-states.slint
ui/screens/: main-screen.slint  manual-selection.slint
websocketserver/: api.js  auto_coreservice_mock.js  manual_coreservice_mock.js
