# Copyright (c) 2025 Cloudflight. All rights reserved.
[package]
name = "NextCoffee"
version = "0.1.0"
authors = ["Felix Marek", "Thomas Friedel"]
edition = "2021"
rust-version = "1.75.0"
build = "build.rs"
repository = "https://github.com/phytec/demo-slint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usvg = "=0.45.1"
slint = { version = "=1.8.0", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-skia"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
openssl = { version = "0.10" }
tungstenite = "=0.28.0"
url = "=2.5.8"
websocket = { version = "=0.27.1", default-features = false, features = ["sync"]  }

home = "=0.5.9"
clru = "=0.6.2"
linked_hash_set = "=0.1.5"
smithay-clipboard = "=0.7.2"
smol_str = "=0.3.2"
idna_adapter = "=1.2.0"
icu_normalizer = "=1.5.0"
icu_properties = "=1.5.1"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
zerofrom = "=0.1.5"
proc-macro-crate = "=3.4.0"
toml_edit = "=0.23.5"
toml_parser = "=1.0.2"
toml_datetime = "=0.7.1"
toml_writer = "=1.0.2"
litemap = "=0.7.4"
lebe = "=0.5.2"
indexmap = "=2.11.4"
half = "=2.4.1"
getrandom = "=0.3.1"
jobserver = "=0.1.32"

[build-dependencies]
slint-build = "=1.8.0"
